Integrate Jest with Next.js, enhance code organization, and improve API utilities
- Configured Jest to work seamlessly with Next.js, including custom configurations in jest.config.js.
- Created 	ypes module to define and manage reusable TypeScript interfaces (e.g., SearchParams, Recipe).
- Added createErrorResponse utility for consistent error handling across API routes.
- Developed SpoonacularService class for modular API interactions with Spoonacular (search and fetch by ID).
- Implemented Prisma client instantiation in a separate module for streamlined database access.
- Refactored API routes to use SpoonacularService and Prisma for fetching and saving recipes.
- Updated 	sconfig.json for improved path aliasing and stricter TypeScript checks.
- Added a basic Home page component as the application’s entry point.
- Modularized error handling for better reusability and consistency across APIs.
- Optimized imports and organized project structure for better maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/app/*": ["./src/app/*"],
+      "@/components/*": ["./src/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
